# quemath

./: .gitignore  Doxyfile  Makefile.am  README.md  configure.ac
Quemath.xcodeproj/: project.pbxproj
Quemath.xcodeproj/xcshareddata/xcschemes/: quemath-benchmark.xcscheme  quemath-ivec.xcscheme  quemath-quat.xcscheme  quemath-vec.xcscheme  quemath-vector.xcscheme  quemath.xcscheme
doc/: layout.xml
quemath/: Makefile.am  ivec.h  mat.h  quat.h  quemath.h  vec.h
test/: .gitignore  Makefile.am  benchmark  benchmark.c  ivec.c  mat.c  quat.c  vec.c
